add some change
change

--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -14,8 +14,8 @@
     </div>
     <div
         class=" login__left h-full rounded-xl shadow-lg md:shadow-none md:border-0 md:rounded-none py-3 md:py-0 border-2 md:mt-28 mt-9 mx-3 px-4 lg:px-9 xl:px-36 bg-white ">
-        <div class="login__left__title ">
-            <span class="login__left__title__text">Se connecter</span>
+        <div class="login__left__title mt-10 ">
+            <span class="login__left__title__text mb-5">Se connecter</span>
         </div>
         <div class="login__left__form mt-10">
             <div class="login__left__form__group ">
@@ -39,7 +39,7 @@
             <div class="my-3">
                 <button
                     class="w-full text-white py-4  popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
-                    connecter</button>
+                    Connecter</button>
             </div>
             <div class="text-center">
                 <span>Ou</span>
@@ -49,7 +49,7 @@
                     class="w-full inline-flex justify-center items-center popping  py-4 border border-blue shadow-sm text-base font-medium rounded-xl text-black bg-white focus:outline-none hover:bg-blue-200 active:-translate-y-1">
                     <!-- Heroicon name: solid/mail -->
                     <img src="../../../../../assets/images/google.svg" class="mr-3" height="20px" width="20px" alt="">
-                    Se connecter avec Google
+                    Se Connecter avec Google
                 </button>
             </div>
             <div class="mt-5 text-center text-base">
