--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -4,27 +4,52 @@
         <button
             class="text-white py-2 px-4 text-xs font-extrabold	  popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
             connecter</button>
+
+
     </div>
     <div class="grid md:grid-cols-2 mt-10 h-auto">
         <div class="flex flex-col my-auto items-start">
-            <h1 class="popping font-extrabold text-3xl my-5">Tender</h1>
-            <p class="popping gray  font-extrabold my-5">L’application qui facilite l’echange des <br> transactions
+            <h1 class="popping font-extrabold text-6xl my-5">Tender</h1>
+            <p class="popping gray  font-extrabold text-xl my-5">L’application qui facilite l’echange des <br>
+                transactions
                 immobilières
             </p>
-            <button
-                class="text-white block inline-block	 py-2 px-8 text-xs	my-5 font-extrabold  popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">
+            <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8">
                 Démarrer</button>
         </div>
         <div class="bg-blue-light rounded-xl">
             <img src="../../../../../assets/images/home1.png" class="translate-y-28" alt="">
         </div>
     </div>
+
+
+    <div class="relative  mt-20 mb-20 ">
+        <div class="grid md:grid-cols-2 ">
+  
+
+                <img src="../../../../../assets/images/partenair.png" class="mx-auto md:mx-0 " alt="">
+       
+            <div class="flex flex-col pt-10 items-start ">
+                <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
+                        class="light-red">digitalisé</span> </h1>
+                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
+                    recherche
+                    un des candidats(s), notre
+                    plateforme offre un
+                    accompagnement complet et totalement digitalisé</p>
+            </div>
+
+
+        </div>
+    </div>
+
+
     <div class="relative max-w-7xl mx-auto mt-20">
         <div class="text-center">
-            <h2 class="text-2xl popping font-extrabold  sm:text-3xl">
+            <h2 class="text-2xl popping font-extrabold  mt-10  sm:text-4xl">
                 Une solution pour vous
             </h2>
-            <p class="mt-4 max-w-2xl popping mx-auto text-sm text-gray-500 sm:mt-4">
+            <p class="mt-4 max-w-2xl popping mx-auto text-sm text-gray-500 sm:mt-4 text-lg">
                 Décvouvrez les avantages sur la ptateforme
             </p>
         </div>
@@ -34,11 +59,13 @@
                 <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                     <div class="flex-1">
                         <a href="#" class="block mt-2">
-                            <img src="../../../../../assets/images/home3.png" class="mb-5" alt="">
+
+                                <img src="../../../../../assets/images/locataire.png" class="mb-5" alt="">
+                   
                             <p class="text-xl font-semibold text-gray-900">
                                 Locataire
                             </p>
-                            <p class="mt-3 text-base text-gray-500">
+                            <p class="mt-3 text-base text-gray-500 ">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
                                 eleifend. Fusce mollis hendrerit
                                 mauris et aliquet.
@@ -52,13 +79,15 @@
                 </div>
             </div>
 
+            
+
             <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
                 <div class="flex-1 bg-white p-6 flex flex-col justify-between">
                     <div class="flex-1">
 
                         <a href="#" class="block mt-2">
-                            <img src="../../../../../assets/images/home4.png" class="mb-5" alt="">
+                            <img src="../../../../../assets/images/bailleur.png" class="mb-5" alt="">
 
                             <p class="text-xl font-semibold text-gray-900">
                                 Remetteur
@@ -70,7 +99,7 @@
                             </p>
                         </a>
                     </div>
-                    <div class="mt-6 flex items-center">
+                    <div class="mt-6 flex items-center ">
                         <p class="text-base popping font-extrabold text--blue mr-5">Commencer </p>
                         <img src="../../../../../assets/images/right-arrow.png" alt="">
                     </div>
@@ -84,7 +113,7 @@
                     <div class="flex-1">
 
                         <a href="#" class="block mt-2">
-                            <img src="../../../../../assets/images/home5.png" class="mb-5" alt="">
+                            <img src="../../../../../assets/images/pro.png" class="mb-5" alt="">
 
                             <p class="text-xl font-semibold text-gray-900">
                                 Professionnel
@@ -104,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="relative  mt-20 ">
+    <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2  gap-5">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
@@ -116,7 +145,7 @@
                     accompagnement complet et totalement digitalisé</p>
             </div>
 
-            <img src="../../../../../assets/images/home7.png" class="shadow-lg 	mx-auto md:mx-0" alt="">
+            <img src="../../../../../assets/images/bien.png" class="	mx-auto md:mx-0" alt="">
 
         </div>
     </div>
@@ -136,6 +165,9 @@
 
         </div>
     </div>
+
+   
+
 
 
 </div>
