--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -2,7 +2,8 @@
 
 //Colors
 $red: #EF4B46;
-$blue: #F7FBFE;
+$blue: #6FB4E1;
+$blue_button: #6FB4E1;
 $yellow: rgba(239, 181, 67, 1);
 $bordure_champ:#DCE9F1;
 $dark_blue:#44576B;
