--- a/src/assets/scss/layouts/_home.scss
+++ b/src/assets/scss/layouts/_home.scss
@@ -29,7 +29,7 @@
                 text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.41);
             }
             &__btn button{
-                @include bgColor($blue)
+                @include bgColor($blue_button)
             }
         }
     }
