--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -25,10 +25,10 @@
 
     <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2 ">
-  
 
-                <img src="../../../../../assets/images/partenair.png" class="mx-auto md:mx-0 " alt="">
-       
+
+            <img src="../../../../../assets/images/partenair.png" class="mx-auto md:mx-0 " alt="">
+
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
                         class="light-red">digitalisé</span> </h1>
@@ -60,8 +60,8 @@
                     <div class="flex-1">
                         <a href="#" class="block mt-2">
 
-                                <img src="../../../../../assets/images/locataire.png" class="mb-5" alt="">
-                   
+                            <img src="../../../../../assets/images/locataire.png" class="mb-5" alt="">
+
                             <p class="text-xl font-semibold text-gray-900">
                                 Locataire
                             </p>
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            
+
 
             <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
@@ -134,15 +134,14 @@
         </div>
     </div>
     <div class="relative  mt-20 mb-20 ">
-        <div class="grid md:grid-cols-2  gap-5">
+        <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
-                        class="light-red">digitalisé</span> </h1>
-                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
-                    recherche
-                    un des candidats(s), notre
-                    plateforme offre un
-                    accompagnement complet et totalement digitalisé</p>
+                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Pour les locataires</h1>
+                <h2 class="text-3xl popping font-extrabold leading-10">Trouvez des <span class="light-red">biens</span>
+                    qui <br> <span class="light-red">vous correspondent</span> </h2>
+                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                    et malesuada fames ac ante ipsum primis in faucibus.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
 
             <img src="../../../../../assets/images/bien.png" class="	mx-auto md:mx-0" alt="">
@@ -150,24 +149,92 @@
         </div>
     </div>
     <div class="relative   mt-20 ">
-        <div class="grid md:grid-cols-2 gap-6 ">
+        <div class="grid md:grid-cols-2 gap-14 ">
+            <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-10 items-start">
-                <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
-                        class="light-red">digitalisé</span> </h1>
+                <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postuler</span> et
+                    recevez des informations sur vos
+                    postulations</h1>
                 <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
-                    recherche
-                    un des candidats(s), notre
-                    plateforme offre un
-                    accompagnement complet et totalement digitalisé</p>
+                    Integer vel laoreet diam, eu dignissim ligula. Ut sit amet libero purus. Praesent rhoncus justo eu
+                    dolor posuere
+                    maximus. Phasellus pulvinar facilisis.</p>
             </div>
 
-            <img src="../../../../../assets/images/home8.png" class="	" alt="">
+
 
         </div>
     </div>
+    <div class="relative  mt-20 mb-20 ">
+        <div class="grid md:grid-cols-2  gap-14">
+            <div class="flex flex-col pt-10 items-start ">
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
+                <h2 class="text-3xl popping font-extrabold leading-10">Ajouter vos <span class="light-yellow"> biens
+                        <br>
+                        immobiliers</span></h2>
+                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                    et malesuada fames ac ante ipsum primis in faucibus.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            </div>
+            <img src="../../../../../assets/images/home10.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
-   
+        </div>
+    </div>
+    <div class="relative  mt-20 mb-20 ">
+        <div class="grid md:grid-cols-2  gap-14">
+            <img src="../../../../../assets/images/home9.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
+            <div class="flex flex-col pt-10 items-start ">
+                <h2 class="text-3xl popping font-extrabold leading-10">Recevez des <span
+                        class="text--blue">candidatures</span> <br> validés par la
+                    plateforme</h2>
+                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                    et malesuada fames ac ante ipsum primis in faucibus.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            </div>
 
+        </div>
+    </div>
+    <div class="relative  mt-20 mb-20 ">
+        <div class="grid md:grid-cols-2  gap-14">
+            <img src="../../../../../assets/images/home11.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+
+            <div class="flex flex-col pt-10 items-start ">
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
+                <h2 class="text-3xl popping font-extrabold leading-10">Des centaines de <br> <span
+                        class="text-purple">publications</span> par jour</h2>
+                <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
+                    et malesuada fames ac ante ipsum primis in faucibus.
+                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="grid md:grid-cols-2  mt-10 mb-20 bg-light-yellow1 rounded-2xl ">
+        <img src="../../../../../assets/images/newsLetter.png" class="justify-self-center">
+        <div class="flex flex-col my-auto items-start px-5 md:px-0">
+            <h1 class="popping font-extrabold text-2xl ">Newsletter</h1>
+            <p class="text-base text-gray-500">Abonnez-vous à la newsletter pour recevoir une
+                notification dès le lancement
+            </p>
+            <div class="mt-5">
+                <input type="email" name="email" id="email" placeholder="Votre email"
+                    class="py-3 mt-2 px-4 l inline shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                <button class=" bg-blue  hover:bg-blue-700 text-white ml-2 font-bold py-3 px-12 rounded-xl mt-3 mb-8">
+                    Démarrer</button>
+            </div>
+
+        </div>
+
+    </div>
+    <div class=" mt-10 pl-20" style="background-image: url('../../../../../assets/images/home12.png');background-repeat: no-repeat;background-position: center;  background-size: 100% 100%;
+">
+        <div class=" flex flex-col my-auto items-start ">
+            <h1 class="popping font-extrabold text-xl my-5 text-white">N’attendez plus</h1>
+            <p class="popping   font-extrabold text-3xl my-5 text-white">Commencez maintenant </p>
+            <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8">
+                S'inscrire</button>
+        </div>
+    </div>
 
 </div>
