--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -16,3 +16,6 @@ $container-max-widths: (
 );
 $blue_light:#F3F9FD;
 $light_red:#F07777;
+$yellow_light:#FACD5D;
+$purple:#BF74DF;
+$yellow_light1:#FDF4E0;
