--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -38,5 +38,28 @@
     color: #44576B;
 }
 .light-red{
- color: #F07777;
+ color: $light_red;
+}
+.light-yellow{
+    color: $yellow_light;
+}
+.bg-light-yellow1{
+    @include bgColor($yellow_light1)
+}
+.border-bottom-blue::after {
+    content: ""; /* This is necessary for the pseudo element to work. */ 
+    display: block; /* This will put the pseudo element on its own line. */
+    width: 25%; /* Change this to whatever width you want. */
+    padding-top: 7px; /* This creates some space between the element and the border. */
+    border-bottom: 5px solid $blue; /* This creates the border. Replace black with whatever color you want. */
+}
+.border-bottom-red::after {
+    content: ""; /* This is necessary for the pseudo element to work. */ 
+    display: block; /* This will put the pseudo element on its own line. */
+    width: 25%; /* Change this to whatever width you want. */
+    padding-top: 7px; /* This creates some space between the element and the border. */
+        border-bottom: 5px solid $light_red; /* This creates the border. Replace black with whatever color you want. */
+}
+.text-purple{
+    color: $purple;
 }
