--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -9,22 +9,22 @@
     </div>
     <div class="grid md:grid-cols-2 mt-10 h-auto">
         <div class="flex flex-col my-auto items-start">
-            <h1 class="popping font-extrabold text-6xl my-5">Tender</h1>
-            <p class="popping gray  font-extrabold text-xl my-5">L’application qui facilite l’echange des <br>
+            <h1 class="popping font-extrabold text-6xl my-5 animate__animated animate__fadeInUp">Tender</h1>
+            <p class="popping gray text-xl my-5 animate__animated animate__fadeInUp">L’application qui facilite l’echange des <br>
                 transactions
                 immobilières
             </p>
-            <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8">
+            <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8 animate__animated animate__fadeInUp">
                 Démarrer</button>
         </div>
         <div class="bg-blue-light rounded-xl">
-            <img src="../../../../../assets/images/home1.png" class="translate-y-28" alt="">
+            <img src="../../../../../assets/images/home1.png" class="translate-y-28 animate__animated animate__fadeInUp" alt="">
         </div>
     </div>
 
 
     <div class="relative  mt-20 mb-20 ">
-        <div class="grid md:grid-cols-2 ">
+        <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
 
 
             <img src="../../../../../assets/images/partenair.png" class="mx-auto md:mx-0 " alt="">
@@ -44,7 +44,7 @@
     </div>
 
 
-    <div class="relative max-w-7xl mx-auto mt-20">
+    <div class="relative max-w-7xl mx-auto mt-20 animate__animated animate__fadeInUp">
         <div class="text-center">
             <h2 class="text-2xl popping font-extrabold  mt-10  sm:text-4xl">
                 Une solution pour vous
@@ -56,11 +56,11 @@
         <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
             <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
-                <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                    <div class="flex-1">
+                <div class="flex-1 bg-white p-6 flex flex-col justify-between ">
+                    <div class="flex-1 ">
                         <a href="#" class="block mt-2">
 
-                            <img src="../../../../../assets/images/locataire.png" class="mb-5" alt="">
+                            <img src="../../../../../assets/images/locataire.png" class="mb-5 " alt="">
 
                             <p class="text-xl font-semibold text-gray-900">
                                 Locataire
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 ">
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Pour les locataires</h1>
@@ -144,11 +144,11 @@
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
 
-            <img src="../../../../../assets/images/bien.png" class="	mx-auto md:mx-0" alt="">
+            <img src="../../../../../assets/images/recherchebien.png" class="	mx-auto md:mx-0" alt="">
 
         </div>
     </div>
-    <div class="relative   mt-20 ">
+    <div class="relative   mt-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2 gap-14 ">
             <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-10 items-start">
@@ -165,22 +165,22 @@
 
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 ">
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
-                <h2 class="text-3xl popping font-extrabold leading-10">Ajouter vos <span class="light-yellow"> biens
+                <h2 class="text-3xl popping font-extrabold leading-10 ">Ajouter vos <span class="light-yellow"> biens
                         <br>
                         immobiliers</span></h2>
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
-            <img src="../../../../../assets/images/home10.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/publier.png" class="mx-auto md:mx-0" alt="">
 
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 ">
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2  gap-14">
             <img src="../../../../../assets/images/home9.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
@@ -195,7 +195,7 @@
 
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 ">
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <img src="../../../../../assets/images/home11.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
