--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -10,15 +10,18 @@
     <div class="grid md:grid-cols-2 mt-10 h-auto">
         <div class="flex flex-col my-auto items-start">
             <h1 class="popping font-extrabold text-6xl my-5 animate__animated animate__fadeInUp">Tender</h1>
-            <p class="popping gray text-xl my-5 animate__animated animate__fadeInUp">L’application qui facilite l’echange des <br>
+            <p class="popping gray text-xl my-5 animate__animated animate__fadeInUp">L’application qui facilite
+                l’echange des <br>
                 transactions
                 immobilières
             </p>
-            <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8 animate__animated animate__fadeInUp">
+            <button
+                class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8 animate__animated animate__fadeInUp">
                 Démarrer</button>
         </div>
         <div class="bg-blue-light rounded-xl">
-            <img src="../../../../../assets/images/home1.png" class="translate-y-28 animate__animated animate__fadeInUp" alt="">
+            <img src="../../../../../assets/images/home1.png" class="translate-y-28 animate__animated animate__fadeInUp"
+                alt="">
         </div>
     </div>
 
@@ -192,6 +195,20 @@
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
+
+        </div>
+    </div>
+    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
+        <div class="grid md:grid-cols-2  gap-14">
+
+            <div class="flex flex-col pt-10 items-start ">
+                <h2 class="text-3xl popping font-extrabold leading-10">Gerer <span class="light-red">vos visites</span>
+                </h2>
+                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
+                    recherche un des candidats(s), notre plateforme offre un
+                    accompagnement complet et totalement digitalisé</p>
+            </div>
+            <img src="../../../../../assets/images/home14.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
         </div>
     </div>
