register function in progress

--- a/src/app/modules/register/pages/steps/activity/activity.component.html
+++ b/src/app/modules/register/pages/steps/activity/activity.component.html
@@ -49,6 +49,20 @@
           </div>
       
       </div>
+      <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
+        <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+            <a (click)="returnToAbout()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
+                <img src="../../../../../../assets/images/precedent.svg" />
+            </a>
+          
+          </div>
+           <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+            
+            <button type="button"   (click)="goToAddress()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                Suivant
+              </button>
+          </div>
+      </div>
     </form>
   </div>
 
