--- a/src/app/modules/register/pages/steps/about/about.component.html
+++ b/src/app/modules/register/pages/steps/about/about.component.html
@@ -90,7 +90,11 @@
       <option>Marié</option>
     </select>
   </div>
-
+       <div class=" py-3 text-right sm:px-6">
+        <button type="button" (click)="goToActivity()" class="inline-flex  items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+            Suivant
+          </button>
+      </div>
 </form>
 
   
