--- a/src/app/modules/register/pages/steps/address/address.component.html
+++ b/src/app/modules/register/pages/steps/address/address.component.html
@@ -3,52 +3,110 @@
     <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Lieu et adresse</div>
     <form action="#" method="POST">
       <div class="grid grid-cols-6 gap-6">
-        <div class="col-span-6 sm:col-span-3">
-            <label for="first-name" class="block text-sm font-medium text-gray-700">Nationalité</label>
-            <input type="text" name="first-name" placeholder="Votre profession" id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+    
+          <div class="col-span-6 sm:col-span-3">
+            <label for="country" class="block text-sm font-medium text-gray-700">Nationalité</label>
+            <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <option>Remeteur</option>
+              <option>Locataire</option>
+              <option>Bailleur</option>
+            </select>
           </div>
         <div class="col-span-6 sm:col-span-3">
           <label for="first-name" class="block text-sm font-medium text-gray-700">Lieu d'origine</label>
-          <input type="date" name="first-name"  id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          <input type="text" name="first-name" placeholder="versoix"  id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
         </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="last-name" class="block text-sm font-medium text-gray-700">Employeur</label>
-          <input type="text" name="last-name" placeholder="Employeur" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        <div class="col-span-6 sm:col-span-6">
+          <label for="country" class="block text-sm font-medium text-gray-700">Permis</label>
+          <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <option>Permis C</option>
+            <option>Permis B</option>
+          </select>
         </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="first-name" class="block text-sm font-medium text-gray-700">Lieu de travail</label>
-          <input type="text" name="first-name" id="first-name" placeholder="Votre lieu de travail" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-
-        <div class="col-span-6 sm:col-span-3">
-          <label for="last-name" class="block text-sm font-medium text-gray-700">Personne de contact</label>
-          <input type="text" name="last-name" placeholder="Votre personne de contact" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="last-name" class="block text-sm font-medium text-gray-700">Téléphone professionnel</label>
-          <input type="text" placeholder="+41" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="last-name" class="block text-sm font-medium text-gray-700">Revenu mensuel brut</label>
-          <input type="text" name="last-name" placeholder = "0" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-          <label for="last-name" class="block text-sm font-medium text-gray-700">Revenu mensuel net</label>
-          <input type="text" name="last-name" placeholder="0" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-      
-        <div class="col-span-6 sm:col-span-3">
-          <label for="first-name" class="block text-sm font-medium text-gray-700">Employeur précédent</label>
-          <input type="text" placeholder="Votre employeur précédent" name="first-name" id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
-        </div>
-        <div class="col-span-6 sm:col-span-3">
-            <label for="first-name" class="block text-sm font-medium text-gray-700">Depuis</label>
-            <input type="date"  name="first-name" id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        <div class="col-span-6 sm:col-span-  ">
+          <label for="last-name" class="block text-sm font-medium text-gray-700">Existe-il une mesure de mise sous tutelle?</label>
+          <div class="grid grid-rows-6 grid-flow-col gap-2">
+            <div class="row-span-6 sm:row-span-6 ">
+              <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                <option>Oui</option>
+                <option>Non</option>
+              </select>
+            </div>    
+            <div class="row-span-6 sm:row-span-6">
+              <input type="text" name="first-name" id="first-name" placeholder="Laquelle ?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            </div>
           </div>
       
-      </div>
-    </form>
-  </div>
+          </div>
+          <div class="col-span-6 sm:col-span-3">
+            <label for="first-name" class="block text-sm font-medium text-gray-700">En Suisse depuis</label>
+            <input type="date" name="first-name" placeholder="versoix"  id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          </div>
+          <div class="col-span-6 sm:col-span-3">
+            <label for="country" class="block text-sm font-medium text-gray-700">Logement familial/principal?</label>
+            <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <option>Oui</option>
+              <option>Non</option>
+            </select>
+          </div>
+  
+        <div class="col-span-6 sm:col-span-6">
+          <label for="last-name" class="block text-sm font-medium text-gray-700">Nombre de personnes occupant le future logement</label>
+          <input type="number" name="last-name" placeholder="12" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        </div>
+        <div class="col-span-6 sm:col-span-3">
+          <label for="last-name" class="block text-sm font-medium text-gray-700">Nombre d'adultes</label>
+          <input type="number" placeholder="6" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        </div>
+        <div class="col-span-6 sm:col-span-3">
+          <label for="last-name" class="block text-sm font-medium text-gray-700">Nombre d'enfants</label>
+          <input type="number" name="last-name" placeholder = "6" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+        </div>
+        <div class="col-span-6 sm:col-span-6">
+          <label for="last-name" class="block text-sm font-medium text-gray-700">Animaux domestiques</label>
+          <div class="grid grid-rows-6 grid-flow-col gap-2">
+            <div class="row-span-6 sm:row-span-6 ">
+              <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                <option>Oui</option>
+                <option>Non</option>
+              </select>
+            </div>    
+            <div class="row-span-6 sm:row-span-6">
+              <input type="text" name="first-name" id="first-name" placeholder="Lesquels ?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+            </div>
+          </div>
+          </div>
+          <div class="col-span-6 sm:col-span-6">
+            <label for="last-name" class="block text-sm font-medium text-gray-700">Instrument de musique</label>
+            <div class="grid grid-rows-6 grid-flow-col gap-2">
+              <div class="row-span-6 sm:row-span-6 ">
+                <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <option>Oui</option>
+                  <option>Non</option>
+                </select>
+              </div>    
+              <div class="row-span-6 sm:row-span-6">
+                <input type="text" name="first-name" id="first-name" placeholder="Lequel ?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+              </div>
+            </div>
+    
+           </div>
+           </div>
+           <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
+            <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+                <a (click)="returnToActivity()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
+                  <img src="../../../../../../assets/images/precedent.svg" />
+                </a>
+              
+              </div>
+               <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+                
+                <button type="button" (click)="goToAnother()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                    Suivant
+                  </button>
+              </div>
+          </div>
+           </form>
+           </div>
+
 
