--- a/src/app/modules/register/pages/steps/another/another.component.html
+++ b/src/app/modules/register/pages/steps/another/another.component.html
@@ -1,1 +1,94 @@
-<p>another works!</p>
+
+  <div class="mt-5 md:mt-0 md:col-span-2 bg-white ">
+    <div class="text-gray-700 text-2xl  font-medium text-gray-700 mb-6">Autres informations</div>
+    <form action="#" method="POST">
+      <div class="grid grid-cols-6 gap-6">
+        <div class="col-span-6 sm:col-span-6">
+            <label for="last-name" class="block text-sm font-medium text-gray-700">Etes-vous fumeur?</label>
+            <div class="grid grid-rows-6 grid-flow-col gap-2">
+              <div class="row-span-6 sm:row-span-6 ">
+                <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                  <option>Oui</option>
+                  <option>Non</option>
+                </select>
+              </div>    
+              <div class="row-span-6 sm:row-span-6">
+              </div>
+            </div>
+            </div>
+            <div class="col-span-6 sm:col-span-6">
+                <label for="last-name" class="block text-sm font-medium text-gray-700">Votre contrat de location actuel a-t-il été résilié par le bailleur?</label>
+                <div class="grid grid-rows-6 grid-flow-col gap-2">
+                  <div class="row-span-6 sm:row-span-6 ">
+                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <option>Oui</option>
+                      <option>Non</option>
+                    </select>
+                 </div>    
+                  <div class="row-span-6 sm:row-span-6">
+                    <input type="text" name="first-name" id="first-name" placeholder="Pourquoi?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  </div>
+                </div>
+            </div>
+            
+            <div class="col-span-6 sm:col-span-6">
+                <label for="last-name" class="block text-sm font-medium text-gray-700">Avez vous des poursuites durant les 2 dernières années?</label>
+                <div class="grid grid-rows-6 grid-flow-col gap-2">
+                  <div class="row-span-6 sm:row-span-6 ">
+                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <option>Oui</option>
+                      <option>Non</option>
+                    </select>
+                  </div>    
+                  <div class="row-span-6 sm:row-span-6">
+                  </div>
+                </div>
+            </div>
+            <div class="col-span-6 sm:col-span-6">
+                <label for="last-name" class="block text-sm font-medium text-gray-700">Avez vous faits l'objet d'actes de défaut de biens durant dans les 5 dernières années?</label>
+                <div class="grid grid-rows-6 grid-flow-col gap-2">
+                  <div class="row-span-6 sm:row-span-6 ">
+                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <option>Oui</option>
+                      <option>Non</option>
+                    </select>
+                  </div>    
+                  <div class="row-span-6 sm:row-span-6">
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-span-6 sm:col-span-6">
+                <label for="last-name" class="block text-sm font-medium text-gray-700">Avez-vous une assurance responsabilité  civile (Avec dégats locataire?)</label>
+                <div class="grid grid-rows-6 grid-flow-col gap-2">
+                  <div class="row-span-6 sm:row-span-6 ">
+                    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+                      <option>Oui</option>
+                      <option>Non</option>
+                    </select>
+                 </div>    
+                  <div class="row-span-6 sm:row-span-6">
+                    <input type="text" name="first-name" id="first-name" placeholder="Compagnie?" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                  </div>
+                </div>
+            </div>
+    
+           </div>
+           <div class="grid grid-rows-6 grid-flow-col gap-2 mt-2">
+            <div class="px-4 py-3 text-left sm:px-6 row-span-6 sm:row-span-6">
+                <a (click)="returnToAddress()" class="inline-flex items-center px-3 py-2  text-sm text-blue-2 cursor-pointer hover:bg-blue-2">
+                  <img src="../../../../../../assets/images/precedent.svg" />
+                </a>
+              
+              </div>
+               <div class="px-4 py-3 text-right sm:px-6 row-span-6 sm:row-span-6">
+                
+                <button type="button" (click)="goToProperty()" class="inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+                    Suivant
+                  </button>
+              </div>
+          </div>
+           </form>
+           </div>
+
+
