--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -22,7 +22,7 @@
                 lobortis
                 tinciduntfames quisque mauris at diam.</p>
         </div>
-        <img class="hidden	md:block animate__animated animate__fadeInUp" src="../../../../../assets/images/landing.png"
+        <img class="hidden	md:block animate__animated animate__fadeInUp" src="../../../../../assets/images/peoplelanding.png"
             alt="">
     </div>
     <div class="">
