--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -27,7 +27,7 @@
         <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
 
 
-            <img src="../../../../../assets/images/partenair.png" class="mx-auto md:mx-0 " alt="">
+            <img src="../../../../../assets/images/echange1.png" class="mx-auto md:mx-0 " alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
@@ -144,7 +144,7 @@
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
 
-            <img src="../../../../../assets/images/recherchebien.png" class="	mx-auto md:mx-0" alt="">
+            <img src="../../../../../assets/images/searchhome.png" class="	mx-auto md:mx-0" alt="">
 
         </div>
     </div>
