files upload design

--- a/src/app/modules/register/pages/register/register.component.html
+++ b/src/app/modules/register/pages/register/register.component.html
@@ -1,7 +1,7 @@
 
 <div class="min-h-screen bg-white flex">
     <div class="hidden lg:block relative w-1/2  flex-1 bg-blue text-center ">
-        <div class="mx-auto w-full">
+        <div class="mx-auto w-full sticky top-20">
             <div class="m-20" >
                 <img class="w-auto" src="../../../../../assets/images/logo.png">
                 <h2 class="mt-6 text-2xl font-extrabold ">
@@ -14,7 +14,14 @@
         </div>
          
     </div>
-    <div class="flex-1 flex flex-col justify-center w-1/2  py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+    <div class="flex-1 flex flex-col justify-center w-1/2  py-6 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
+      
+    <div class="text-right mb-2">
+      <a  class="inline-flex items-center py-2  text-xl text-blue-2 cursor-pointer hover:bg-blue-2">
+        Se connecter
+       </a>
+  
+    </div>
       <!-- This example requires Tailwind CSS v2.0+ -->
 <nav aria-label="Progress"  class="mb-6">
   <ol class="flex items-center">
