--- a/src/app/modules/register/pages/steps/about/about.component.html
+++ b/src/app/modules/register/pages/steps/about/about.component.html
@@ -45,56 +45,64 @@
           <label for="last-name" class="block text-sm font-medium text-gray-700">Domicilié depuis</label>
           <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
         </div>
+        <div class="col-span-6 sm:col-span-6">
+          <label for="last-name" class="block text-sm font-medium mb-3 text-gray-700">Photo de profil</label>
+          <div class="grid grid-rows-6 grid-flow-col gap-2">
+            <div class="row-span-6 sm:row-span-6 ">
+              <div class="mt-1 sm:mt-0 sm:col-span-2">
+                <div class="flex items-center">
+            
+                  <span class="h-12 w-12 rounded-full overflow-hidden bg-gray-100">
+                     <label>
+                      <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
+                      </svg>
+                      <input type="file" id="upload" style="display:none">
+                     </label>
+                  </span>
+                  <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    Choisir
+                  </button>
+                  <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    Supprimer
+                  </button>
+                </div>
+              </div>
+            </div>    
+            <div class="row-span-6 sm:row-span-6">
+            </div>
+          </div>
+          
+         </div>
+         <div class="col-span-6 sm:col-span-6">
+          <label for="country" class="block text-sm font-medium text-gray-700">Etat civil</label>
+          <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <option>Célibataire</option>
+            <option>Marié</option>
+          </select>
+        </div>
         <div class="col-span-6 sm:col-span-3">
           <label for="last-name" class="block text-sm font-medium text-gray-700">Téléphone</label>
-          <input type="text" name="last-name" placeholder="Votre Téléphone" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          <input type="text" name="last-name" placeholder="Votre numéro de téléphone" id="last-name" autocomplete="family-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
         </div>
       
         <div class="col-span-6 sm:col-span-3">
           <label for="first-name" class="block text-sm font-medium text-gray-700">Email</label>
-          <input type="text" placeholder="Votre email" name="first-name" id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+          <input type="text" placeholder="Votre adresse email" name="first-name" id="first-name" autocomplete="given-name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
         </div>
-      
+      </div>
+      <div>
+        <div class="space-y-8 divide-y divide-gray-200">
+          <div class=" py-3 text-right sm:px-6">
+           <button type="button" (click)="goToActivity()" class="inline-flex  items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
+               Suivant
+             </button>
+         </div>
+       </div>
       </div>
     </form>
   </div>
+   
 
-<form class="space-y-8 divide-y divide-gray-200">
-  <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
-    <div>
-      <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
-        <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-center sm:border-t sm:border-gray-200 sm:pt-5">
-          <label for="photo" class="block text-sm font-medium text-gray-700">
-            Photo de profil
-          </label>
-          <div class="mt-1 sm:mt-0 sm:col-span-2">
-            <div class="flex items-center">
-              <span class="h-12 w-12 rounded-full overflow-hidden bg-gray-100">
-                <svg class="h-full w-full text-gray-300" fill="currentColor" viewBox="0 0 24 24">
-                  <path d="M24 20.993V24H0v-2.996A14.977 14.977 0 0112.004 15c4.904 0 9.26 2.354 11.996 5.993zM16.002 8.999a4 4 0 11-8 0 4 4 0 018 0z" />
-                </svg>
-              </span>
-              <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                Choisir
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-span-6 sm:col-span-3">
-    <label for="country" class="block text-sm font-medium text-gray-700">Etat civil</label>
-    <select id="country" name="country" autocomplete="country" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-      <option>Célibataire</option>
-      <option>Marié</option>
-    </select>
-  </div>
-       <div class=" py-3 text-right sm:px-6">
-        <button type="button" (click)="goToActivity()" class="inline-flex  items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md shadow-sm text-white bg-blue-2 hover:bg-blue-2 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:bg-blue-2">
-            Suivant
-          </button>
-      </div>
-</form>
 
   
