--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5">
+    <img src="../../../../../assets/images/degrade.png" alt="">
     <div class="nav flex flex-row justify-between">
         <img src="../../../../../assets/images/logo.png" alt="">
         <button
