--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -38,7 +38,7 @@
             </div>
             <div class="my-3">
                 <button
-                    class="w-full text-white py-4  popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
+                    class="w-full text-white py-4  popping bg_blue_button hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
                     Connecter</button>
             </div>
             <div class="text-center">
@@ -46,7 +46,7 @@
             </div>
             <div class="my-3">
                 <button type="button"
-                    class="w-full inline-flex justify-center items-center popping  py-4 border border-blue shadow-sm text-base font-medium rounded-xl text-black bg-white focus:outline-none hover:bg-blue-200 active:-translate-y-1">
+                    class="w-full inline-flex justify-center items-center popping  py-4 border border-blue shadow-sm text-base font-medium rounded-xl text-black bg-white focus:outline-none hover:bg-blue-100 active:-translate-y-1">
                     <!-- Heroicon name: solid/mail -->
                     <img src="../../../../../assets/images/google.svg" class="mr-3" height="20px" width="20px" alt="">
                     Se Connecter avec Google
