--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-20 mb-5">
     <div class="flex justify-between">
-        <img src="../../../../../assets/images/logo.png" class="animate__animated animate__fadeInUp" alt="">
+        <img src="../../../../../assets/images/logo1.png" class="animate__animated animate__fadeInUp" alt="">
         <button class="popping text-blue-400 font-extrabold">Accueil</button>
     </div>
     <div class="grid md:grid-cols-2">
