--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,22 +1,29 @@
-<div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5">
+<div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5"
+    style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
+
     <div class="nav flex flex-row justify-between">
-        <img src="../../../../../assets/images/logo.png" alt="">
+        <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
         <button
-            class="text-white py-2 px-4 text-xs font-extrabold	  popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
+            class="text-white  px-4 text-xs font-extrabold self-center		h-10 popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
             connecter</button>
 
 
     </div>
     <div class="grid md:grid-cols-2 mt-10 h-auto">
         <div class="flex flex-col my-auto items-start">
-            <h1 class="popping font-extrabold text-6xl my-5 animate__animated animate__fadeInUp">Tender</h1>
-            <p class="popping gray text-xl my-5 animate__animated animate__fadeInUp">L’application qui facilite
-                l’echange des <br>
-                transactions
-                immobilières
+            <div class="flex flex-row">
+                <h1 class="popping font-extrabold text-6xl my-5 animate__animated animate__fadeInUp">Tenders</h1>
+                <img src="../../../../../assets/images/bulle1.png" class="-translate-y-14 	-translate-x-10 height-100  "
+                    alt="">
+            </div>
+            <p class="popping gray font-semibold	 text-xl my-5 animate__animated animate__fadeInUp">Le premier
+                réseau
+                immobilier
+                <br> qui te fait gagner le temps
+
             </p>
             <button
-                class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8 animate__animated animate__fadeInUp">
+                class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded-xl mt-3 mb-8 animate__animated animate__fadeInUp">
                 Démarrer</button>
         </div>
         <div class="bg-blue-light rounded-xl">
@@ -25,34 +32,47 @@
         </div>
     </div>
 
+</div>
+
+<div class="container mx-auto px-6 sm:px-8 lg:px-24 pt-16 mb-5">
 
     <div class="relative  mt-20 mb-20 ">
         <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
 
 
-            <img src="../../../../../assets/images/echange1.png" class="mx-auto md:mx-0 " alt="">
+            <img src="../../../../../assets/images/echange1.png" class="hidden md:block mx-auto md:mx-0 " alt="">
 
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-3xl popping font-extrabold leading-10">Un accompagnement <br> 100% <span
-                        class="light-red">digitalisé</span> </h1>
-                <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
-                    recherche
-                    un des candidats(s), notre
-                    plateforme offre un
-                    accompagnement complet et totalement digitalisé</p>
+                <div class="flex flex-row">
+                    <h1 class="text-3xl popping font-extrabold leading-10">tenders en quelques <br>
+                        mots</h1>
+                    <img src="../../../../../assets/images/bulle1.png" class="-translate-y-20 -translate-x-20"
+                        height="100px" alt="">
+
+                </div>
+
+                <p class="mt-5 text-base text-gray-500">Tenders est le premier réseau immobilier qui te fait gagner du
+                    temps ! Que tu sois locataire, propriétaire ou
+                    professionnel, notre objectif est de te mettre en relation avec tous les acteurs du marché. A
+                    travers une plateforme
+                    fluide et intuitive, tu crées ton profil en quelques clics et tes recherches n’auront jamais été
+                    aussi rapides !</p>
             </div>
         </div>
     </div>
 
 
     <div class="relative max-w-7xl mx-auto mt-20 animate__animated animate__fadeInUp">
-        <div class="text-center">
-            <h2 class="text-2xl popping font-extrabold  mt-10  sm:text-4xl">
-                Une solution pour vous
-            </h2>
-            <p class="mt-4 max-w-2xl popping mx-auto text-sm text-gray-500 sm:mt-4 text-lg">
-                Décvouvrez les avantages sur la ptateforme
-            </p>
+        <div class="">
+            <div class="flex flex-col items-center">
+                <h2 class="text-2xl popping font-extrabold  mt-10  sm:text-4xl">
+                    Une platforme pensées <br>
+                    pour vous
+                </h2>
+                <img src="../../../../../assets/images/bulle3.png"
+                    class="-translate-y-36 translate-x-28 md:-translate-y-36 md:-translate-x-72" height="100px" f
+                    alt="">
+            </div>
         </div>
         <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
             <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
@@ -63,7 +83,7 @@
 
                             <img src="../../../../../assets/images/locataire.png" class="mb-5 " alt="">
 
-                            <p class="text-xl font-semibold text-gray-900">
+                            <p class="text-xl font-bold text-gray-900">
                                 Locataire
                             </p>
                             <p class="mt-3 text-base text-gray-500 ">
@@ -90,8 +110,8 @@
                         <a href="#" class="block mt-2">
                             <img src="../../../../../assets/images/bailleur.png" class="mb-5" alt="">
 
-                            <p class="text-xl font-semibold text-gray-900">
-                                Remetteur
+                            <p class="text-xl font-bold text-gray-900">
+                                Propriétaire
                             </p>
                             <p class="mt-3 text-base text-gray-500">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
@@ -116,7 +136,7 @@
                         <a href="#" class="block mt-2">
                             <img src="../../../../../assets/images/pro.png" class="mb-5" alt="">
 
-                            <p class="text-xl font-semibold text-gray-900">
+                            <p class="text-xl font-bold text-gray-900">
                                 Professionnel
                             </p>
                             <p class="mt-3 text-base text-gray-500">
@@ -137,9 +157,13 @@
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Pour les locataires</h1>
-                <h2 class="text-3xl popping font-extrabold leading-10">Trouvez des <span class="light-red">biens</span>
-                    qui <br> <span class="light-red">vous correspondent</span> </h2>
+                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si tu es locataire</h1>
+                <div class="flex flex-row">
+                    <h2 class="text-3xl popping font-extrabold leading-10">Trouvez des <span
+                            class="light-red">biens</span>
+                        qui <br> <span class="light-red">vous correspondent</span> </h2>
+                    <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt="">
+                </div>
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -153,9 +177,15 @@
         <div class="grid md:grid-cols-2 gap-14 ">
             <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-10 items-start">
-                <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postuler</span> et
-                    recevez des informations sur vos
-                    postulations</h1>
+                <div class=" flex flex-row">
+                    <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postule</span> et
+                        et consulte en temps réel la <span class="text--blue">progression</span> de <span
+                            class="text--blue">ton
+                            dossier</span></h1>
+                    <img src="../../../../../assets/images/bulle6.png"
+                        class="-translate-y-20 -translate-x-10 height-100" alt="">
+                </div>
+
                 <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
                     Integer vel laoreet diam, eu dignissim ligula. Ut sit amet libero purus. Praesent rhoncus justo eu
                     dolor posuere
@@ -167,12 +197,16 @@
         </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
-        <div class="grid md:grid-cols-2  gap-14">
+        <div class="grid md:grid-cols-2 grid-flow-col	  gap-14">
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
-                <h2 class="text-3xl popping font-extrabold leading-10 ">Ajouter vos <span class="light-yellow"> biens
-                        <br>
-                        immobiliers</span></h2>
+                <div class="flex flex-row ">
+                    <h2 class="text-3xl popping font-extrabold leading-10 ">Publie tes <span class="light-yellow"> biens
+                            <br>
+                            immobiliers</span></h2>
+                    <img src="../../../../../assets/images/bulle7.png" class="-translate-y-14 height-100" alt="">
+                </div>
+
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -186,9 +220,17 @@
             <img src="../../../../../assets/images/home9.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
-                <h2 class="text-3xl popping font-extrabold leading-10">Recevez des <span
-                        class="text--blue">candidatures</span> <br> validés par la
-                    plateforme</h2>
+                <div class="flex flex-row">
+                    <h2 class="text-3xl popping font-extrabold leading-10">Reçois des <span
+                            class="text--blue">candidatures</span> <br>
+                        <span class="text--blue">préalablement
+                            examinées</span> par la
+                        plateforme
+                    </h2>
+                    <img src="../../../../../assets/images/bulle8.png"
+                        class="-translate-y-20 -translate-x-16 height-100" alt="">
+                </div>
+
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -200,8 +242,13 @@
         <div class="grid md:grid-cols-2  gap-14">
 
             <div class="flex flex-col pt-10 items-start ">
-                <h2 class="text-3xl popping font-extrabold leading-10">Gerer <span class="light-red">vos visites</span>
-                </h2>
+                <div class="flex flex-row">
+                    <h2 class="text-3xl popping font-extrabold leading-10">Gère <span class="light-red">tes
+                            visites</span>
+                    </h2>
+                    <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px" alt="">
+                </div>
+
                 <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
                     recherche un des candidats(s), notre plateforme offre un
                     accompagnement complet et totalement digitalisé</p>
@@ -216,8 +263,13 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
-                <h2 class="text-3xl popping font-extrabold leading-10">Des centaines de <br> <span
-                        class="text-purple">publications</span> par jour</h2>
+                <div class="flex flex-row">
+                    <h2 class="text-3xl popping font-extrabold leading-10">Des centaines de <br> <span
+                            class="text-purple">publications</span> par jour</h2>
+                    <img src="../../../../../assets/images/bulle10.png"
+                        class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt="">
+                </div>
+
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -226,15 +278,16 @@
         </div>
     </div>
     <div class="grid md:grid-cols-2  mt-10 mb-20 bg-light-yellow1 rounded-2xl ">
-        <img src="../../../../../assets/images/newsLetter.png" class="justify-self-center">
+        <img src="../../../../../assets/images/newsLetter.png" class="justify-self-center -translate-y-14	"
+            height="100px">
         <div class="flex flex-col my-auto items-start px-5 md:px-0">
             <h1 class="popping font-extrabold text-2xl ">Newsletter</h1>
-            <p class="text-base text-gray-500">Abonnez-vous à la newsletter pour recevoir une
+            <p class="text-base text-gray-500 mt-3">Abonnez-vous à la newsletter pour recevoir une
                 notification dès le lancement
             </p>
-            <div class="mt-5">
+            <div class="mt-5 w-full">
                 <input type="email" name="email" id="email" placeholder="Votre email"
-                    class="py-3 mt-2 px-4 l inline shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                    class="py-3 mt-2 px-4  xl:w-1/2 inline  shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 <button class=" bg-blue  hover:bg-blue-700 text-white ml-2 font-bold py-3 px-12 rounded-xl mt-3 mb-8">
                     Démarrer</button>
             </div>
@@ -242,7 +295,7 @@
         </div>
 
     </div>
-    <div class=" mt-10 pl-20" style="background-image: url('../../../../../assets/images/home12.png');background-repeat: no-repeat;background-position: center;  background-size: 100% 100%;
+    <!-- <div class=" mt-10 pl-20" style="background-image: url('../../../../../assets/images/home12.png');background-repeat: no-repeat;background-position: center;  background-size: 100% 100%;
 ">
         <div class=" flex flex-col my-auto items-start ">
             <h1 class="popping font-extrabold text-xl my-5 text-white">N’attendez plus</h1>
@@ -250,13 +303,13 @@
             <button class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded mt-3 mb-8">
                 S'inscrire</button>
         </div>
-    </div>
+    </div> -->
     <footer class="bg-white" aria-labelledby="footer-heading">
         <h2 id="footer-heading" class="sr-only">Footer</h2>
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
             <div class="xl:grid xl:grid-cols-3 xl:gap-8">
                 <div class="space-y-8 xl:col-span-1">
-                    <img src="../../../../../assets/images/logo.png" alt="Company name">
+                    <img src="../../../../../assets/images/logo1.png" alt="Company name">
                     <p class="text-gray-500 text-base">
                         Holo est le premier réseau social 100% dédié à l’immobilier
                     </p>
