--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container  px-6 sm:px-8 lg:px-24 pt-16 mb-5"
+<div class="  px-6 sm:px-8 lg:px-24 pt-16 mb-5"
     style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
 
     <div class="nav flex flex-row justify-between">
@@ -179,7 +179,7 @@
             <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-10 items-start">
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postule</span> et
+                    <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postule</span>
                         et consulte en temps réel la <span class="text--blue">progression</span> de <span
                             class="text--blue">ton
                             dossier</span></h1>
