change register bg-blue to bg-blue-light

--- a/src/app/modules/register/pages/register/register.component.html
+++ b/src/app/modules/register/pages/register/register.component.html
@@ -1,11 +1,11 @@
 
 <div class="min-h-screen bg-white flex">
-    <div class="hidden lg:block relative w-1/2  flex-1 bg-blue text-center ">
+    <div class="hidden lg:block relative w-1/2  flex-1 bg-blue-light text-center ">
         <div class="mx-auto w-full sticky top-20">
             <div class="m-20" >
-                <img class="w-auto" src="../../../../../assets/images/logo.png">
-                <h2 class="mt-6 text-2xl font-extrabold ">
-                    Le premier réseau social 100% dédié à l'immobilier                  
+                <img class="w-auto ml-8" src="../../../../../assets/images/logo.png">
+                <h2 class="mt-6 text-2xl  text-gray ">
+                  Le premier réseau immobilier qui te fait gagner du temps                
                 </h2>
             </div>
             <div class="m-12">
