--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,34 +1,29 @@
-<div class="  px-6 sm:px-8 lg:px-24 pt-16 mb-5"
+<div class="  px-6 sm:px-8  pt-16 mb-5 lg:px-20"
     style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
-
     <div class="nav flex flex-row justify-between">
         <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
-        <button
-            class="text-white bg-blue px-4 text-xs font-extrabold self-center		h-10 popping login__left__form__group__btn hover:bg-blue-600 rounded-xl active:-translate-y-1">Se
-            connecter</button>
+        
+        <div class="flex flex-row">
+          
+                <button class="text-white px-6 rounded-md font-700 mr-z text-xl bg-blue-600 btnhover ">Faire partie de l'aventure                   </button>
 
-
+            
+        </div>
     </div>
-    <div class="grid md:grid-cols-2 mt-10 h-auto">
+
+    <div class="grid md:grid-cols-2 mt-10 container mx-auto lg:px-10">
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
-                <h1 class="popping font-extrabold text-6xl my-5 animate__animated animate__fadeInUp">Tenders</h1>
-                <img src="../../../../../assets/images/bulle1.png" class="-translate-y-14 	-translate-x-10 height-100  "
-                    alt="">
+                <h1 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-5xl text-black leading-tight">Le réseau immobilier qui <br>te fait  <span class="light-red">gagner du temps </span> </h1>
             </div>
-            <p class="popping gray font-semibold	 text-xl my-5 animate__animated animate__fadeInUp">Le premier
-                réseau
-                immobilier
-                <br> qui te fait gagner le temps
-
-            </p>
+       
             <button
                 class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded-xl mt-3 mb-8 animate__animated animate__fadeInUp">
                 Démarrer</button>
         </div>
-        <div class=" rounded-xl">
-            <img src="../../../../../assets/images/homeimage.png"
-                class="translate-y-28 animate__animated animate__fadeInUp" alt="">
+        <div class=" ">
+            <img src="../../../../../assets/images/homeimage.png" width="1900px"
+                class="translate-y-28 animate__animated animate__fadeInUp ml-10 " alt="">
         </div>
     </div>
 
