--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -3,10 +3,11 @@
 //Colors
 $red: #EF4B46;
 $blue: #F3F9FD;
-$blue_button: #6FB4E1;
+$blue_button: #8bc2ff;
 $yellow: rgba(239, 181, 67, 1);
 $bordure_champ:#DCE9F1;
 $dark_blue:#44576B;
+$hover-btn: #f4f4f4;
 $container-max-widths: (
   sm: 540px,
   md: 720px,
