--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -60,6 +60,7 @@
 
 .dotted-color{
   background-color: #7EC69D;
+
 }
 
 .light-yellow{
@@ -91,4 +92,14 @@
 .height-100{
     height: 100px !important;
     width: 100px !important;
+}
+
+.hover_btn{
+    background-color: $hover-btn;
+    box-shadow: 0 4px 12px #00000014;
+    transform: scale(1.03);
+}
+
+.text-black{
+    color:#302929;
 }
