--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -2,51 +2,60 @@
     style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
     <div class="nav flex flex-row justify-between">
         <img src="../../../../../assets/images/logo1.png" class="max-width-80" alt="">
-        
-        <div class="flex flex-row">
-          
-                <button class="text-white px-6 rounded-md font-700 mr-z text-xl bg-blue-600 btnhover ">Faire partie de l'aventure                   </button>
 
-            
+        <div class="flex flex-row">
+
+            <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire 😊
+            </button>
+
+
         </div>
     </div>
 
     <div class="grid md:grid-cols-2 mt-10 container mx-auto lg:px-10">
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
-                <h1 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-5xl text-black leading-tight">Le réseau immobilier qui <br>te fait  <span class="light-red">gagner du temps </span> </h1>
+                <h1
+                    class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-5xl text-black leading-tight">
+                    Le réseau immobilier qui <br>te fait <span class="light-red">gagner du temps </span> </h1>
             </div>
-       
+
             <button
-                class="bg-blue hover:bg-blue-700 text-white font-bold py-2 px-12 rounded-xl mt-3 mb-8 animate__animated animate__fadeInUp">
-                Démarrer</button>
+                class="btn_blue_3 text-white font-semibold py-4 px-12 rounded-md mt-3 mb-8 animate__animated animate__fadeInUp btnhover">
+                'adore 😍</button>
         </div>
         <div class=" ">
             <img src="../../../../../assets/images/homeimage.png" width="1900px"
-                class="translate-y-28 animate__animated animate__fadeInUp ml-10 " alt="">
+                class="translate-y-28 animate__animated animate__fadeInUp  " alt="">
         </div>
     </div>
 
 </div>
 
-<div class="  px-6 sm:px-8 lg:px-24 pt-16 mb-5">
+
+
+
+<div class="px-6 sm:px-8 lg:px-24  mb-5">
 
     <div class="relative  mt-20 mb-20 ">
-        <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp ">
+        <div class="grid grid md:grid-cols-2 animate__animated animate__fadeInUp ">
 
 
             <img src="../../../../../assets/images/echange1.png" class="hidden md:block mx-auto md:mx-0 " alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h1 class="text-3xl popping font-extrabold leading-10">tenders en quelques <br>
-                        mots</h1>
-                    <img src="../../../../../assets/images/bulle1.png" class="-translate-y-20 -translate-x-20"
-                        height="100px" alt="">
+                    <h1 class=" popping font-extrabold leading-tight text-5xl mb-4">tenders <span class="text-purple">en
+                            quelques <br>
+                            mots...</span>
+                    </h1>
+                    <!-- <img src="../../../../../assets/images/bulle1.png" class="-translate-y-20 -translate-x-20"
+                        alt=""> -->
 
                 </div>
 
-                <p class="mt-5 text-base text-gray-500">Tenders est le premier réseau immobilier qui te fait gagner du
+                <p class="text-base text-gray-500 text-lg">Tenders est le premier réseau immobilier qui te fait gagner
+                    du
                     temps ! Que tu sois locataire, propriétaire ou
                     professionnel, notre objectif est de te mettre en relation avec tous les acteurs du marché. A
                     travers une plateforme
@@ -62,12 +71,13 @@
     <div class="relative max-w-7xl mx-auto mt-20 animate__animated animate__fadeInUp">
         <div class="">
             <div class="flex flex-col items-center">
-                <h2 class="text-2xl popping font-extrabold  mt-10  sm:text-4xl">
+                <h2 class="text-4xl popping font-extrabold  mt-10 text-center sm:text-5xl">
                     Une platforme pensées <br>
                     pour vous
                 </h2>
                 <img src="../../../../../assets/images/bulle3.png"
-                    class="-translate-y-36 translate-x-28 md:-translate-y-36 md:translate-x-72" height="100px" f alt="">
+                    class="-translate-y-36 translate-x-28 md:-translate-y-44 md:translate-x-80 " height="100px" f
+                    alt="">
             </div>
         </div>
         <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
@@ -155,10 +165,10 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si tu es locataire</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-10">Trouvez des <span
+                    <h2 class="text-4xl popping font-extrabold leading-snug">Trouver des <span
                             class="light-red">biens</span>
                         qui <br> <span class="light-red">vous correspondent</span> </h2>
-                    <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt="">
+                    <!-- <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt=""> -->
                 </div>
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
@@ -174,12 +184,12 @@
             <img src="../../../../../assets/images/home8.png" class="	" alt="">
             <div class="flex flex-col pt-10 items-start">
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl popping font-extrabold leading-10"> <span class="text--blue">Postule</span>
+                    <h1 class="text-4xl popping font-extrabold leading-normal"> <span class="text--blue">Postule</span>
                         et consulte en temps réel la <span class="text--blue">progression</span> de <span
                             class="text--blue">ton
                             dossier</span></h1>
-                    <img src="../../../../../assets/images/bulle6.png"
-                        class="-translate-y-20 -translate-x-10 height-100" alt="">
+                    <!-- <img src="../../../../../assets/images/bulle6.png"
+                        class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
 
                 <p class="mt-5 text-base text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
@@ -197,7 +207,8 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
                 <div class="flex flex-row ">
-                    <h2 class="text-3xl popping font-extrabold leading-10 ">Publie tes <span class="light-yellow"> biens
+                    <h2 class="text-4xl popping font-extrabold  leading-snug ">Publie tes <span class="light-yellow">
+                            biens
                             <br>
                             immobiliers</span></h2>
                     <img src="../../../../../assets/images/bulle7.png" class="-translate-y-14 height-100" alt="">
@@ -217,7 +228,7 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-10">Reçois des <span
+                    <h2 class=" popping font-extrabold leading-snug text-4xl ">Reçois des <span
                             class="text--blue">candidatures</span> <br>
                         <span class="text--blue">préalablement
                             examinées</span> par la
@@ -239,7 +250,7 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-10">Gère <span class="light-red">tes
+                    <h2 class="text-4xl popping font-extrabold leading-snug">Gère <span class="light-red">tes
                             visites</span>
                     </h2>
                     <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px" alt="">
@@ -260,10 +271,10 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-10">Des centaines de <br> <span
+                    <h2 class="text-4xl popping font-extrabold leading-snug">Des centaines de <br> <span
                             class="text-purple">publications</span> par jour</h2>
-                    <img src="../../../../../assets/images/bulle10.png"
-                        class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt="">
+                    <!-- <img src="../../../../../assets/images/bulle10.png"
+                        class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt=""> -->
                 </div>
 
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
