--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $blue_light:#F3F9FD;
 $light_red:#F07777;
 
 $blue_2:#6FB4E1;
+$blue_3:#2e94fa; 
 $yellow_light:#FACD5D;
 $purple:#BF74DF;
 $yellow_light1:#FDF4E0;
