--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -94,12 +94,12 @@
     width: 100px !important;
 }
 
-.hover_btn{
-    background-color: $hover-btn;
-    box-shadow: 0 4px 12px #00000014;
-    transform: scale(1.03);
-}
+
 
 .text-black{
     color:#302929;
+}
+
+.btn_blue_3{
+    background-color: $blue_3;
 }
