--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -13,6 +13,7 @@
     background-color: $hover-btn;
     box-shadow: 0 4px 12px #00000014;
     transform: scale(1.03);
+    color:$blue_3;
   }
 }
 
