home padding fix

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -182,7 +182,7 @@
     <div class="relative   mt-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2 gap-14 ">
             <img src="../../../../../assets/images/home8.png" class="	" alt="">
-            <div class="flex flex-col pt-10 items-start">
+            <div class="flex flex-col pt-0 xl:pt-10 items-start">
                 <div class=" flex flex-row">
                     <h1 class="text-4xl popping font-extrabold leading-normal"> <span class="text--blue">Postule</span>
                         et consulte en temps réel la <span class="text--blue">progression</span> de <span
