home & register change
ajout des images sur la homepage et sur la register page

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -25,7 +25,7 @@
                 'adore 😍</button>
         </div>
         <div class=" ">
-            <img src="../../../../../assets/images/homeimage.png" width="1900px"
+            <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/1.png" width="1900px"
                 class="translate-y-28 animate__animated animate__fadeInUp  " alt="">
         </div>
     </div>
@@ -41,7 +41,7 @@
         <div class="grid grid md:grid-cols-2 animate__animated animate__fadeInUp ">
 
 
-            <img src="../../../../../assets/images/echange1.png" class="hidden md:block mx-auto md:mx-0 " alt="">
+            <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/2.png" class="hidden md:block mx-auto md:mx-0 " alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
@@ -72,8 +72,10 @@
         <div class="">
             <div class="flex flex-col items-center">
                 <h2 class="text-4xl popping font-extrabold  mt-10 text-center sm:text-5xl">
-                    Une platforme pensées <br>
-                    pour vous
+                    Une platforme pensées 
+                    <span class="textpurle">
+                        pour vous
+                    </span> 
                 </h2>
                 <img src="../../../../../assets/images/bulle3.png"
                     class="-translate-y-36 translate-x-28 md:-translate-y-44 md:translate-x-80 " height="100px" f
@@ -165,7 +167,7 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si tu es locataire</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-4xl popping font-extrabold leading-snug">Trouver des <span
+                    <h2 class="text-3xl popping font-extrabold leading-snug sm:text-5xl">Trouver des <span
                             class="light-red">biens</span>
                         qui <br> <span class="light-red">vous correspondent</span> </h2>
                     <!-- <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt=""> -->
@@ -175,19 +177,17 @@
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
 
-            <img src="../../../../../assets/images/searchhome.png" class="	mx-auto md:mx-0" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/trouver-un-bien.png" class="	mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
 
         </div>
     </div>
     <div class="relative   mt-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2 gap-14 ">
-            <img src="../../../../../assets/images/home8.png" class="	" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/postulations.png" alt="">
             <div class="flex flex-col pt-10 items-start">
                 <div class=" flex flex-row">
-                    <h1 class="text-4xl popping font-extrabold leading-normal"> <span class="text--blue">Postule</span>
-                        et consulte en temps réel la <span class="text--blue">progression</span> de <span
-                            class="text--blue">ton
-                            dossier</span></h1>
+                    <h1 class="text-3xl popping font-extrabold leading-normal sm:text-4xl"> <span class="text--blue">Postule</span>
+                        et consulte en temps réel <span class="text--blue">la progression de ton dossier</span>  </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
@@ -207,24 +207,23 @@
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
                 <div class="flex flex-row ">
-                    <h2 class="text-4xl popping font-extrabold  leading-snug ">Publie tes <span class="light-yellow">
-                            biens
+                    <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publie  <span class="light-yellow">
+                        tes biens
                             <br>
                             immobiliers</span></h2>
-                    <img src="../../../../../assets/images/bulle7.png" class="-translate-y-14 height-100" alt="">
                 </div>
 
                 <p class="mt-5 text-base text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
                     et malesuada fames ac ante ipsum primis in faucibus.
                     Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
             </div>
-            <img src="../../../../../assets/images/publier.png" class="mx-auto md:mx-0" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/32. nouveau_bien7.png" class="mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
 
         </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
         <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/home9.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/15. candidatures-nouveau.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
@@ -260,13 +259,13 @@
                     recherche un des candidats(s), notre plateforme offre un
                     accompagnement complet et totalement digitalisé</p>
             </div>
-            <img src="../../../../../assets/images/home14.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
         </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/home11.png" class="mx-auto md:mx-0 shadow-lg" alt="">
+            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/9. accueil.png" class="mx-auto md:mx-0 shadow-lg" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
