--- a/src/app/modules/register/pages/register/register.component.html
+++ b/src/app/modules/register/pages/register/register.component.html
@@ -9,7 +9,7 @@
                 </h2>
             </div>
             <div class="m-12">
-                <img class="mx-auto"  height="400" width="450" src="../../../../../assets/images/acitivitepro3.png">
+                <img class="mx-auto"  height="400" width="450" src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/7.png">
              </div>
         </div>
          
