change landing page
change landing page

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -25,7 +25,7 @@
                 lobortis
                 tinciduntfames quisque mauris at diam.</p>
         </div>
-        <img class="hidden	md:block animate__animated animate__fadeInUp" src="../../../../../assets/images/peoplelanding.png"
+        <img class="	md:block animate__animated animate__fadeInUp" src="../../../../../assets/images/peoplelanding.png"
             alt="">
     </div>
 </div>
